--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script data-ad-client="ca-pub-6645735422711194" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="cookieoverlay">
 <div class="wrapper">
 <div class="cookiecolumn">
 <div class="leftcookiecolumn">
@@ -29,10 +30,11 @@
       <header>Cookies Consent</header>
       <p>This website use cookies to ensure you get the best experience on our website.</p>
       <div class="cookiebuttons">
-        <button class="item">Got it</button>
+        <button class="item">Close</button>
         <a href="#" class="item">Learn more</a>
       </div>
     </div>
+</div>
 </div>
 </div>
 </div>
