--- a/main/shopping/shopping.htm
+++ b/main/shopping/shopping.htm
@@ -309,7 +309,7 @@
 <!--Amazon ads banner-->
 <div>
    <a target="_blank" href="https://www.amazon.in/music/prime?_encoding=UTF8&linkCode=ib1&tag=alphakingdom0-21&linkId=6462ca4259b65d424af3a30936240bcf&ref_=ihub_curatedcontent_bcfbad37-481e-4b57-b188-549b8a14ae91">
-   <img src="images/amazon/banner/amazon_music_banner" class="banner" alt="Amazon_music"></img>
+   <img src="images/amazon/banner/amazon_music_banner.jpg" class="banner" alt="Amazon_music"></img>
    </a>
 </div> 
     
